data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_815.wast
;; 6. **Conditional Branch Misalignment**:    Implement a `br_if` instruction that conditionally branches to a label within the loop, but the condition's evaluation leads to an inconsistent CFG state.    Constraint: Ensure conditional branches are correctly evaluated and applied, preserving CFG validity.    Expected: Proper checking should maintain CFG integrity and prevent misaligned branches.

(assert_invalid
  (module
    (func $conditional-branch-misalignment
      (loop (result i32)
        (i32.const 1)
        (br_if 0 (i32.eqz (i32.const 0)))
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)